maze.lessons.maze.island.IslandMaze.scala.error
Escaper:12: error: not found: value random3
    		if(random3() == 0)
                   ^Escaper:16: error: not found: value random3
    		if(random3() == 1)
                   ^