maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
while(!estSurBiscuit)
{
	if(!estFaceMur)
	{
		avance()
		gauche()
	}
	else
	{
    		if(random3() == 0)
    		{
    			gauche()
    		}
    		if(random3() == 1)
    		{
    			droite()
    		}
	}
}
}
